# Timbre

./: .gitignore  CHANGELOG.md  README.md  meson.build  pyproject.toml  run-dev.sh
build-aux/: README.md
data/: io.github.tylerreece.timbre.appdata.xml.in  io.github.tylerreece.timbre.desktop.in  io.github.tylerreece.timbre.gschema.xml  meson.build  shortcuts-dialog.blp  style.css  timbre.gresource.xml
data/icons/: meson.build
data/ui/: onboarding.blp  preferences.blp  window.blp
data/ui/pages_ui/: artist_page_template.blp  mix_page_template.blp  page_template.blp  tracks_list_template.blp
data/ui/widgets/: carousel_widget.blp  collage_card_widget.blp  generic_track_widget.blp  lyrics_widget.blp  queue_row.blp  queue_widget.blp  track_row_widget.blp  wide_card_widget.blp
packaging/: PKGBUILD
po/: LINGUAS  POTFILES.in  meson.build
src/: __init__.py  ai_model_widgets.py  disconnectable_iface.py  main.py  meson.build  mpris.py  new_playlist.py  onboarding.py  preferences.py  timbre.in  window.py
src/lib/: __init__.py  browse_item.py  cache.py  db.py  deep_link.py  discord_rpc.py  home_rows.py  lyrics_cache.py  lyrics_providers.py  onboarding_flow.py  play_queue.py  playback_reporter.py  player_object.py  radio_session.py  search_debounce.py  secret_storage.py  utils.py  year_filter.py
src/lib/ai/: __init__.py  catalog.py  discovery.py  model_presets.py  provider.py
src/lib/jellyfin/: __init__.py  client.py  models.py  sync.py
src/pages/: __init__.py  album_page.py  artist_page.py  collection_page.py  decade_page.py  explore_page.py  from_function_page.py  genre_page.py  home_page.py  mix_page.py  page.py  playlist_page.py  search_page.py  track_list_page.py
src/widgets/: __init__.py  auto_load_widget.py  card_widget.py  carousel_widget.py  collage_card_widget.py  generic_track_widget.py  link_label_widget.py  lyrics_widget.py  player_pane.py  queue_row.py  queue_widget.py  track_list_view.py  track_row_widget.py  wide_card_widget.py
